# Copyright 2021 IRT Saint Exupéry, https://www.irt-saintexupery.com
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License version 3 as published by the Free Software Foundation.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program; if not, write to the Free Software Foundation,
# Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
"""Tests for the base class of the variable hierarchy."""

from __future__ import annotations

import pickle
from copy import copy
from copy import deepcopy
from inspect import isabstract

import pytest
from numpy import array
from numpy import atleast_1d
from numpy import inf
from numpy import nan
from numpy.testing import assert_array_equal
from pydantic import ValidationError

from gemseo.space.variable import BaseVariable
from gemseo.space.variable import ContinuousVariable
from gemseo.space.variable import DataType
from gemseo.space.variable import IntegerVariable
from gemseo.util.pydantic_ndarray import NDArrayPydantic  # noqa: TC001
from gemseo.util.testing.helper import assert_exception
from tests.space.variable.utils import KINDS


def test_base_variable_is_abstract() -> None:
    """Check that the base variable cannot be instantiated."""
    assert isabstract(BaseVariable)
    assert BaseVariable.__abstractmethods__ == frozenset({"compute_normalization_mask"})
    with pytest.raises(TypeError):
        BaseVariable()


@pytest.mark.parametrize("cls", KINDS)
@pytest.mark.parametrize(
    ("size", "lower_bound", "upper_bound"),
    [
        (1, 0, 0.0),
        (10, -5.0, 0.0),
        (1, -5.0, inf),
        (1, -inf, inf),
        (2, (-4, 4), inf),
    ],
)
def test_initialization(
    cls: type[BaseVariable],
    size: int,
    lower_bound: float | tuple[float, float],
    upper_bound: float,
) -> None:
    """Test the instantiation."""
    my_variable = cls(size=size, lower_bound=lower_bound, upper_bound=upper_bound)
    assert my_variable.size == size
    assert (my_variable.lower_bound == atleast_1d(lower_bound)).all()
    assert (my_variable.upper_bound == atleast_1d(upper_bound)).all()


@pytest.mark.parametrize("cls", KINDS)
@pytest.mark.parametrize("size", [-1, 0])
def test_non_positive_size(cls, size, snapshot) -> None:
    """Check non-positive variables size."""
    with assert_exception(ValidationError, snapshot):
        cls(size=size)


@pytest.mark.parametrize("cls", KINDS)
@pytest.mark.parametrize(
    "type_", ["complex", DataType.FLOAT, DataType.INTEGER, DataType.DISCRETE]
)
def test_type_is_not_settable(cls, type_, snapshot) -> None:
    """Check that the data type, pinned by the kind, cannot be passed.

    This holds whatever the value, including the data type pinned by the kind itself.
    """
    with assert_exception(ValidationError, snapshot):
        cls(type=type_)


@pytest.mark.parametrize("cls", KINDS)
def test_unknown_field(cls, snapshot) -> None:
    """Check that an unknown field is rejected instead of being ignored."""
    with assert_exception(ValidationError, snapshot):
        cls(unknown=0)


@pytest.mark.parametrize("cls", KINDS)
@pytest.mark.parametrize("side", ["lower", "upper"])
def test_invalid_bound_size(cls, side, snapshot) -> None:
    """Check invalid bound size."""
    with assert_exception(ValidationError, snapshot):
        cls(**{f"{side}_bound": [0, 0]})


@pytest.mark.parametrize("cls", KINDS)
@pytest.mark.parametrize("side", ["lower", "upper"])
def test_invalid_bound_value_scalar(cls, side, snapshot) -> None:
    """Check invalid bound value type."""
    with assert_exception(ValidationError, snapshot):
        cls(**{f"{side}_bound": 1j})


@pytest.mark.parametrize("cls", KINDS)
def test_wrong_boundaries(cls: type[BaseVariable], snapshot) -> None:
    """Test the instantiation with `upper_bound` lower than `lower_bound`."""
    with assert_exception(ValueError, snapshot):
        cls(size=1, lower_bound=0, upper_bound=-1)


@pytest.mark.parametrize("bound", ["lower_bound", "upper_bound"])
def test_frozen(variable, bound, snapshot) -> None:
    """Check that a variable is immutable (bounds cannot be reassigned)."""
    with assert_exception(ValidationError, snapshot):
        setattr(variable, bound, 0)


@pytest.mark.parametrize("cls", KINDS)
@pytest.mark.parametrize("side", ["lower", "upper"])
@pytest.mark.parametrize("bound", [array([nan]), array([nan, nan])])
def test_bound_with_nan_components(cls, side, bound, snapshot) -> None:
    """Check a bound with one or several nan components."""
    with assert_exception(ValidationError, snapshot):
        cls(size=bound.size, **{f"{side}_bound": bound})


@pytest.mark.parametrize("cls", KINDS)
@pytest.mark.parametrize("side", ["lower", "upper"])
def test_multidimensional_bound(cls, side, snapshot) -> None:
    """Check a bound with more than one dimension."""
    with assert_exception(ValidationError, snapshot):
        cls(size=2, **{f"{side}_bound": array([[1.0, 2.0]])})


def test_model_copy_without_update(variable) -> None:
    """Check that copying a variable without an update returns the variable itself."""
    assert variable.model_copy() is variable
    assert variable.model_copy(deep=True) is variable


@pytest.mark.parametrize("cls", KINDS)
def test_model_copy_with_inconsistent_update(cls, snapshot) -> None:
    """Check that an update inconsistent with the bounds is rejected.

    The base implementation of `model_copy` writes the update into `__dict__` without
    validating it.
    """
    variable = cls(size=2, lower_bound=0, upper_bound=1)
    with assert_exception(ValidationError, snapshot):
        variable.model_copy(update={"size": 5})


@pytest.mark.parametrize(
    ("cls", "type_"),
    [(ContinuousVariable, DataType.INTEGER), (IntegerVariable, DataType.FLOAT)],
)
def test_model_copy_with_another_type(cls, type_, snapshot) -> None:
    """Check that an update contradicting the pinned data type is rejected."""
    variable = cls(size=2, lower_bound=0, upper_bound=1)
    with assert_exception(ValidationError, snapshot):
        variable.model_copy(update={"type": type_})


def test_copy_and_pickle_keep_the_kind(variable, snapshot) -> None:
    """Check that copying and unpickling preserve the kind and the frozen bounds."""
    assert copy(variable) is variable
    assert deepcopy(variable) is variable

    restored = pickle.loads(pickle.dumps(variable))

    assert type(restored) is type(variable)
    assert restored == variable
    assert not restored.lower_bound.flags.writeable
    assert not restored.upper_bound.flags.writeable

    # Pickling preserves neither the writeable flag nor the base of an array,
    # so the restored bounds must have been refrozen and re-viewed.
    with assert_exception(ValueError, snapshot):
        restored.lower_bound.setflags(write=True)

    with assert_exception(ValueError, snapshot):
        restored.upper_bound.setflags(write=True)


@pytest.mark.parametrize("enable_integer_normalization", [False, True])
@pytest.mark.parametrize("upper_bound", [1, inf])
@pytest.mark.parametrize("cls", KINDS)
def test_compute_normalization_mask(
    cls, upper_bound, enable_integer_normalization
) -> None:
    """Check the per-component normalization policy of a variable."""
    variable = cls(size=2, lower_bound=0, upper_bound=upper_bound)
    policy = variable.compute_normalization_mask(enable_integer_normalization)
    expected = upper_bound != inf and (
        cls is ContinuousVariable or enable_integer_normalization
    )
    assert_array_equal(policy, [expected] * 2)


@pytest.mark.parametrize("cls", KINDS)
def test_find_components_outside_domain_with_none_and_inf(cls) -> None:
    """Check that None and infinite components are in the domain of a variable."""
    variable = cls(size=2, lower_bound=0, upper_bound=inf)
    value = array([None, inf], dtype=object)
    assert variable.find_components_outside_domain(value) == set()


def test_eq_is_data_based() -> None:
    """Check that equality compares the data and not the exact class."""
    continuous = ContinuousVariable(size=2, lower_bound=0, upper_bound=1)
    integer = IntegerVariable(size=2, lower_bound=0, upper_bound=1)

    assert continuous == ContinuousVariable(size=2, lower_bound=0, upper_bound=1)
    assert continuous != integer
    assert continuous != ContinuousVariable(size=2, lower_bound=0, upper_bound=2)
    assert continuous != "not a variable"
    # The sizes differ, so the comparison returns before reaching the bounds.
    assert continuous != ContinuousVariable(size=3, lower_bound=0, upper_bound=1)


def test_eq_compares_the_fields_of_a_subclass() -> None:
    """Check that a field added by a subclass takes part in the comparison."""

    class CustomVariable(ContinuousVariable):
        """A continuous variable with extra fields."""

        label: str = ""
        weights: NDArrayPydantic[float] = array([0.0])

    variable = CustomVariable(size=1, lower_bound=0, upper_bound=1, label="a")

    assert variable == CustomVariable(size=1, lower_bound=0, upper_bound=1, label="a")
    assert variable != CustomVariable(size=1, lower_bound=0, upper_bound=1, label="b")
    # An array field whose components cannot be compared element-wise.
    assert variable != CustomVariable(
        size=1, lower_bound=0, upper_bound=1, label="a", weights=array([0.0, 0.0])
    )
    # The extra fields are declared by only one of the two kinds.
    assert variable != ContinuousVariable(size=1, lower_bound=0, upper_bound=1)
